--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
@@ -30,9 +29,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
-    implementation 'mysql:mysql-connector-java'
-    runtimeOnly 'com.mysql:mysql-connector-j'
-
+//    implementation 'mysql:mysql-connector-java'
+//    runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
 tasks.named('test') {
