--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
-    testImplementation 'org.springframework.security:spring-security-test'
+
+    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'
+    implementation "com.h2database:h2"
+    runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'mysql:mysql-connector-java'
+
 
 //    implementation 'mysql:mysql-connector-java'
 //    runtimeOnly 'com.mysql:mysql-connector-j'
