댓글 작성 수정 삭제 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://rds-intstance.cglmyo5weiko.ap-northeast-2.rds.amazonaws.com:3306/meme?serverTimezone=Asia/Seoul
-    username: admin
-    password: rlarbfl1!
+    url: jdbc:mysql://localhost:3306/meme?serverTimezone=Asia/Seoul
+    username: root
+    password: 1234
   thymeleaf:
     cache: 'false'
   jpa:
